[workspace]
resolver = "2"
members = [
    "contracts/*",
]

[workspace.dependencies]
rusty-hook = "0.11.2"
soroban-sdk = "21.0.1-preview.2"
soroban-token-sdk = "21.0.1-preview.2"
num-integer = { version = "0.1.45", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true