[workspace]
resolver = "2"
members = [
    "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "21.0.1-preview.3"
soroban-token-sdk = "21.0.1-preview.3"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
strip = "symbols"
panic = "abort"
codegen-units = 1
lto = true