[workspace]
resolver = "2"
members = [
    "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "21.1.0-rc.1"
soroban-token-sdk = "21.1.0-rc.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
strip = "symbols"
panic = "abort"
codegen-units = 1
lto = true